# abhikarta-llm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LEGAL_NOTICE.md  LICENSE  README-v2.0.0.md  README.md  SECURITY_RELEASE_v2.1.0.md  V2_RELEASE_SUMMARY.md  WHY_ABHIKARTA.md  pyrightconfig.json  requirements-v1.0.0.txt  requirements-v2.0.0.txt  requirements-v2.1.0.txt  requirements.txt  run_server.py  setup.py
abhikarta-main/: README.md  pyproject.toml
abhikarta-main/entity_definitions/agents/: code_generation_agent.json  creative_writing_agent.json  data_analysis_agent.json  decision_support_agent.json  multi_step_reasoning_agent.json  persona_based_agent.json  reflection_agent.json  research_agent.json  socratic_tutor_agent.json  strategic_advisor_agent.json  summarization_agent.json  task_decomposition_agent.json
abhikarta-main/entity_definitions/aiorg/: consulting_firm.json  content_studio.json
abhikarta-main/entity_definitions/scripts/: data_pipeline_workflow.json  goal_agent.json
abhikarta-main/entity_definitions/swarms/: basic_parallel_swarm.json  collaborative_debate_swarm.json
abhikarta-main/entity_definitions/workflows/: adaptive_learning.json  adaptive_learning_loop.json  chain_of_verification.json  complex_research_pipeline.json  comprehensive_analysis.json  conditional_branching.json  debate_synthesis.json  ensemble_voting.json  error_handling_retry.json  event_driven_pipeline.json  hierarchical_task_network.json  hitl_review_pipeline.json  iterative_refinement.json  knowledge_extraction.json  map_reduce_pattern.json  multi_agent_orchestration.json  parallel_processing.json  recursive_improvement.json  saga_pattern.json  semantic_router.json  sequential_pipeline.json  state_machine.json
abhikarta-main/examples/agent/: code_assistant.py  decision_support_system.json  decision_support_system.py  interactive_tutor.json  interactive_tutor.py  research_assistant.py
abhikarta-main/examples/scripts/: content_creation_swarm.py  document_analysis_workflow.py
abhikarta-main/examples/workflow/: comprehensive_analysis_pipeline.json  content_generation_pipeline.py  data_transformation_pipeline.json  document_processing_pipeline.json  document_processing_pipeline.py  multi_agent_collaboration.json
abhikarta-main/src/abhikarta/actor/: actor.py  dispatcher.py  patterns.py  router.py  scheduler.py  supervision.py  system.py
abhikarta-main/src/abhikarta/agent/: __init__.py  agent_template.py
abhikarta-main/src/abhikarta/aiorg/: __init__.py  aiorg_template.py  db_ops.py  hitl_manager.py  models.py  org_manager.py  prompts.py  task_engine.py
abhikarta-main/src/abhikarta/config/: __init__.py  properties.py  settings.py
abhikarta-main/src/abhikarta/core/config/: __init__.py
abhikarta-main/src/abhikarta/database/: database_delegate.py
abhikarta-main/src/abhikarta/database/delegates/: __init__.py  code_fragment_delegate.py  execution_delegate.py  notification_delegate.py  scripts_delegate.py  swarm_delegate.py
abhikarta-main/src/abhikarta/database/schema/: __init__.py  postgres_schema.py  sqlite_schema.py
abhikarta-main/src/abhikarta/examples/: __init__.py
abhikarta-main/src/abhikarta/examples/agent/: react_agent.py
abhikarta-main/src/abhikarta/examples/swarm/: __init__.py  basic_swarm.py  definitions.json
abhikarta-main/src/abhikarta/hitl/: hitl_manager.py
abhikarta-main/src/abhikarta/langchain/: __init__.py  agents.py  llm_factory.py  tools.py  workflow_graph.py
abhikarta-main/src/abhikarta/llm_provider/: llm_facade.py
abhikarta-main/src/abhikarta/mcp/: client.py  manager.py
abhikarta-main/src/abhikarta/messaging/: activemq_broker.py  base.py  memory_broker.py  rabbitmq_broker.py
abhikarta-main/src/abhikarta/monitoring/: __init__.py  metrics.py
abhikarta-main/src/abhikarta/notification/: base.py  manager.py  teams_adapter.py  webhook_receiver.py
abhikarta-main/src/abhikarta/scripts/: script_template.py
abhikarta-main/src/abhikarta/services/: __init__.py  code_fragment_sync.py  conversation_memory.py  execution_logger.py  llm_config_resolver.py
abhikarta-main/src/abhikarta/swarm/: event_bus.py  master_actor.py  orchestrator.py  swarm_agent.py  swarm_definition.py  swarm_template.py
abhikarta-main/src/abhikarta/tools/: __init__.py  base_tool.py  code_fragment_tool.py  http_tool.py  mcp_tool.py  registry.py  tool_documentation.py
abhikarta-main/src/abhikarta/utils/: __init__.py  code_loader.py  helpers.py  script_template.py
abhikarta-main/src/abhikarta/workflow/: __init__.py  dag_parser.py  executor.py  node_types.py  workflow_template.py
abhikarta-sdk-client/: README.md  pyproject.toml
abhikarta-sdk-client/examples/: quickstart.py
abhikarta-sdk-client/src/abhikarta_client/: __init__.py  agents.py  client.py  organizations.py  scripts.py  swarms.py  workflows.py
abhikarta-sdk-embedded/: README.md  pyproject.toml
abhikarta-sdk-embedded/examples/: quickstart.py
abhikarta-sdk-embedded/src/abhikarta_embedded/: __init__.py  core.py  decorators.py
abhikarta-sdk-embedded/src/abhikarta_embedded/agents/: __init__.py  base.py  goal.py  hierarchical.py  react.py  reflect.py
abhikarta-sdk-embedded/src/abhikarta_embedded/orgs/: __init__.py  base.py
abhikarta-sdk-embedded/src/abhikarta_embedded/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
abhikarta-sdk-embedded/src/abhikarta_embedded/swarms/: __init__.py  base.py
abhikarta-sdk-embedded/src/abhikarta_embedded/tools/: __init__.py  base.py
abhikarta-sdk-embedded/src/abhikarta_embedded/workflows/: __init__.py  base.py
abhikarta-web/: README.md  pyproject.toml
abhikarta-web/src/abhikarta_web/: __init__.py  abhikarta_llm_web.py  app.py
abhikarta-web/src/abhikarta_web/routes/: __init__.py  abstract_routes.py  admin_routes.py  agent_routes.py  aiorg_routes.py  auth_routes.py  conversation_routes.py  hitl_routes.py  mcp_routes.py  metrics_routes.py  notification_routes.py  script_routes.py  swarm_routes.py  user_routes.py  workflow_routes.py
abhikarta-web/src/abhikarta_web/templates/: base.html
abhikarta-web/src/abhikarta_web/utils/: export_utils.py
(+1285 files in other folders)
