[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abhikarta"
version = "1.4.8"
description = "Abhikarta-LLM Core Library - Enterprise AI Agent Orchestration Framework"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Ashutosh Sinha", email = "ajsinha@gmail.com"}
]
keywords = [
    "ai", "agents", "llm", "orchestration", "workflow",
    "swarm", "ai-organization", "langchain", "ollama"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-ollama>=0.0.1",
    "langgraph>=0.0.1",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
messaging = [
    "pika>=1.3.0",
    "kafka-python>=2.0.0",
    "stomp.py>=8.1.0",
]
openai = [
    "openai>=1.0.0",
    "langchain-openai>=0.0.1",
]
anthropic = [
    "anthropic>=0.18.0",
    "langchain-anthropic>=0.0.1",
]
google = [
    "google-generativeai>=0.4.0",
    "langchain-google-genai>=0.0.1",
]
notifications = [
    "slack-sdk>=3.21.0",
    "pymsteams>=0.2.0",
]
all = [
    "psycopg2-binary>=2.9.0",
    "pika>=1.3.0",
    "kafka-python>=2.0.0",
    "stomp.py>=8.1.0",
    "openai>=1.0.0",
    "langchain-openai>=0.0.1",
    "anthropic>=0.18.0",
    "langchain-anthropic>=0.0.1",
    "google-generativeai>=0.4.0",
    "langchain-google-genai>=0.0.1",
    "slack-sdk>=3.21.0",
    "pymsteams>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/abhikarta/abhikarta-llm"
Documentation = "https://docs.abhikarta.ai"
Repository = "https://github.com/abhikarta/abhikarta-llm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abhikarta = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
