[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abhikarta-sdk-embedded"
version = "1.4.8"
description = "Embedded Python SDK for building AI agents, workflows, swarms, and organizations - no server required"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ashutosh Sinha", email = "ajsinha@gmail.com"}
]
keywords = [
    "ai", "llm", "agents", "workflows", "swarms", "orchestration",
    "langchain", "ollama", "openai", "anthropic", "multi-agent", "embedded"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.1.0",
]
all = [
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ajsinha/abhikarta-llm"
Documentation = "https://abhikarta-llm.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]
